--- a/app/partials/guest/login.html
+++ b/app/partials/guest/login.html
@@ -31,17 +31,16 @@
     </div>
     <div class="control-group">
         <div class="controls">
-            <label class="checkbox" style="font-size: 10px">
-                <input type="checkbox" style="color: gray">给我记住
-                <a href="" style="padding-left: 8px">忘了密码</a>
-            </label>
+            <!--<label class="checkbox" style="font-size: 10px">-->
+                <!--&lt;!&ndash;<input type="checkbox" style="color: gray">给我记住&ndash;&gt;-->
+            <!--</label>-->
             <button type="submit" ng-disabled="login.$invalid" class="button glow button-flat-primary button-small" style="width: 130px" ng-click="toLogin()">登陆</button>
         </div>
     </div>
      <div class="control-group">
         <div class="controls">
             <div style="color: gray; font-size: 12px">
-                新人？<a href="#/guest/register" >立即注册！</a>
+                <a href="#/guest/register" >立即注册！</a>                  <a href="#/guest/forgetPass" style="padding-left: 18px">忘了密码</a>
             </div>
         </div>
     </div>
