--- a/app/partials/guest-header.html
+++ b/app/partials/guest-header.html
@@ -1,6 +1,8 @@
 <div class="navbar" ng-controller="heaederCtrl">
     <div class="navbar-inner">
-        <a class="brand" href="#"><img width="60" height="60" src="img/logo.jpg"/></a>
+        <a class="brand" href="#" title="Wooice">
+            <img width="78"  src="img/logo.jpg"/>
+        </a>
         <ul class="nav">
         </ul>
     </div>
