--- a/app/partials/user-stream.html
+++ b/app/partials/user-stream.html
@@ -115,7 +115,7 @@
             </div>
 
             <div class="{{loadClass}}" style="text-align: center">
-                loading...
+                <i class="icon-spinner icon-spin icon-large"></i> 努力加载中...
             </div>
 
             <div class="{{noSoundMsg}}" style="position:absolute; top:40%; left:40%;">
