--- a/app/partials/sound-detail.html
+++ b/app/partials/sound-detail.html
@@ -6,11 +6,18 @@
         <div class="span11">
             <!--Body content-->
             <div id="sound_streams">
-                <div id="sound_{{sound.id}}" class='sound_item'>
+                <div id="sound_{{sound.id}}" class='sound_single_item'>
                     <div id="sound_art_{{sound.id}}" class='sound_art'>
                         <div id="sound_cover_{{sound.id}}">
-                            <div id="sound_cover_ul_{{sound.id}}"  class= 'poster_img'>
-                                <a href='#' ><img  ng-src="{{sound.poster}}"></a>
+                            <div id="sound_cover_ul_{{sound.id}}" class='poster_img'>
+                                <a href='#'><img ng-src="{{sound.poster}}"></a>
+                                <div style="padding-top: 5px"  ng-show="isOwner()">
+                                  <span
+                                        class="button button-small button-rounded button-flat fileinput-button">
+                                    <span>上传海报</span>
+                                    <input id="poster_upload" type="file" name="file" ng-change="previewImage()">
+                                  </span>
+                                 </div>
                             </div>
                         </div>
                     </div>
@@ -18,14 +25,25 @@
                     <div id="sound_player_{{sound.id}}" class='sound_player'>
                         <div id="sound_player_header_{{sound.id}}" class='sound_player_header'>
                             <div class='sound_player_control'>
-                                <i style="cursor:pointer" id='sound_player_button_{{sound.id}}' class='icon-play sound_player_button'  ng-click="togglePause(sound.id)"></i>
+                                <i style="cursor:pointer" id='sound_player_button_{{sound.id}}'
+                                   class='icon-play sound_player_button' ng-click="togglePause(sound.id)"></i>
                             </div>
                             <div id="sound_summary_{{sound.id}}">
                                 <div id="sound_owner_{{sound.id}}">
-                                    <a class='sound_owner 'href="{{sound.owner.route}}">{{sound.owner.alias}}</a>
+                                    <a class='sound_owner ' href="{{sound.owner.route}}">{{sound.owner.alias}}</a>
                                 </div>
                                 <div id="sound_title_{{sound.id}}">
-                                    <a class='sound_title' href="{{sound.title.route}}">{{sound.title.alias}}</a>
+                                    <span ng-if="sound.title.readonly">
+                                        <a class='sound_title' href="{{sound.title.route}}">{{sound.title.alias}}</a>
+                                    </span>
+                                    <input ng-if="!sound.title.readonly" type="text" required
+                                           ng-model="sound.title.alias"/>
+                                    <a href="#" ng-if="sound.title.readonly" onclick="return false;"
+                                       ng-click="editSoundAlias()" ng-show="isOwner()"
+                                       style="text-decoration:none;color:black"><i class="icon-edit"></i></a>
+                                    <a href="#" ng-if="!sound.title.readonly" onclick="return false;"
+                                       ng-click="editSoundAlias()" ng-show="isOwner()"
+                                       style="text-decoration:none;color:black"><i class="icon-save"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -35,11 +53,17 @@
                         </div>
                         <div id="sound_player_footer_{{sound.id}}" class='sound_player_footer border-light-bottom'>
                             <div id="sound_commentbox_{{sound.id}}">
-                                <input type="text" id="sound_commentbox_input_{{sound.id}}" class="input-block-level"  placeholder="Leave your comment...">
+                                <input type="text" id="sound_commentbox_input_{{sound.id}}" class="input-block-level"
+                                       placeholder="Leave your comment...">
                                 <input type="hidden" id="sound_comment_point_{{sound.id}}">
                             </div>
-                            <a href="#" class="button button-small button-rounded button-flat action-button" onclick="return false;" ng-click="toggleLike(sound.id)"><i class="icon-heart"></i></i> {{sound.soundUserPrefer.likeWording}}</a>
-                            <a href="#" class="button button-small button-rounded button-flat action-button" onclick="return false;" ng-click="toggleRepost(sound.id)"><i class="icon-retweet"></i></i> {{sound.soundUserPrefer.repostWording}}</a>
+                            <a href="#" class="button button-small button-rounded button-flat action-button"
+                               onclick="return false;" ng-click="toggleLike(sound.id)"><i class="icon-heart"></i></i>
+                                {{sound.soundUserPrefer.likeWording}}</a>
+                            <a href="#" class="button button-small button-rounded button-flat action-button"
+                               onclick="return false;" ng-click="toggleRepost(sound.id)"><i
+                                    class="icon-retweet"></i></i> {{sound.soundUserPrefer.repostWording}}</a>
+
                             <div class="pull-right">
                                 <i class="icon-play-sign stat_icon"></i>{{sound.soundSocial.playedCount}}
                                 |
@@ -60,32 +84,79 @@
                         <div class="sound_tags">
                         </div>
                         <div class="sound_description">
+                            <div style="padding-bottom: 5px">
+                                <i class="icon-headphones"></i> 声音描述
+                                <a href="#" ng-if="sound.description.readonly" onclick="return false;"
+                                   ng-click="editSoundDescription()" ng-show="isOwner()" class="pull-right"
+                                   style="text-decoration:none;"><i class="icon-edit"></i></a>
+                                <a href="#" ng-if="!sound.description.readonly" onclick="return false;"
+                                   ng-click="editSoundDescription()" ng-show="isOwner()" class="pull-right"
+                                   style="text-decoration:none;"><i class="icon-save"></i></a>
+                            </div>
+                            <div class="border-light-top">
+                                <span ng-if="sound.description.context && sound.description.readonly">{{sound.description.context}}</span>
+                                <span ng-if="!sound.description.context && sound.description.readonly">暂无声音描述</span>
+                                <textarea ng-if="!sound.description.readonly" type="text" required
+                                          class="input-block-level"
+                                          ng-model="sound.description.context">
+                                </textarea>
+                            </div>
                         </div>
                         <div class="sound_comments" style="padding-top: 20px">
                             <div style="padding-bottom: 5px">
-                            <i class="icon-comment"></i> {{comments.length}} comments
-                             </div>
-                            <ul class="ul-nostyle"  ng-repeat="comment in comments">
+                                <i class="icon-comment"></i> {{sound.soundSocial.commentsCount}}条评论
+                                <a href="#" title="刷新评论" onclick="return false;" ng-click="reloadComments()"
+                                   style="text-decoration:none;" class="pull-right"><i class="icon-refresh"></i></a>
+                            </div>
+                            <ul class="ul-nostyle" ng-repeat="comment in comments">
                                 <li class="border-light-top">
                                     <a href="{{comment.owner.route}}" style="float:left;padding-top:10px">
-                                         <img src="{{comment.owner.profile.avatorUrl}}" width="40px" height="40px">
+                                        <img src="{{comment.owner.profile.avatorUrl}}" width="40px" height="40px">
                                     </a>
+
                                     <div class="comment_body">
-                                    <div>
-                                        <a href="{{comment.owner.route}}">
-                                            {{comment.owner.profile.alias}}
-                                        </a>
-                                        <span style="color:#999; font-size: 12px" ng-show="comment.pointAt"> @ {{comment.pointAt}}</span>
-                                    </div>
-                                    <span style="color:#333;"> {{comment.comment}} </span>
-                                    </div>
-                                    <div class="pull-right" style="color:#ccc; padding-top: 5px">
-                                        <time datatime="{{comment.createdTime}}" style="font-style:italic;">
-                                            {{comment.createdTime}}
-                                        </time>
+                                        <div>
+                                            <a href="{{comment.owner.route}}">
+                                                {{comment.owner.profile.alias}}
+                                            </a>
+                                            <span ng-show="comment.to">
+                                                <span style="color:#999; font-size: 12px">@</span>
+                                            <a href="{{comment.to.route}}">
+                                                {{comment.to.profile.alias}}
+                                            </a>
+                                            </span>
+                                            <span style="color:#999; font-size: 12px" ng-show="comment.pointAt"> @ {{comment.pointAt}}秒  </span>
+
+                                            <div class="pull-right">
+                                                <a href="#" onclick="return false;" ng-click="reply()" title="回复本条评论"
+                                                   style="text-decoration:none;padding-right: 8px"><i class="icon-reply"></i></a>
+                                                <a href="#" ng-if="isOwner() || isCommentOwner()" onclick="return false;" ng-click="deleteComment()" title="删除本条评论"
+                                                   style="text-decoration:none;padding-right: 8px"><i class="icon-trash"></i></a>
+                                            </div>
+                                        </div>
+                                        <span style="color:#333;padding-top: 5px"> {{comment.comment}} </span>
+
+                                        <div class="pull-right" style="font-size: 12px">
+                                            <time datatime="{{comment.createdTime}}"
+                                                  style="font-style:italic;color:#ccc;">
+                                                {{comment.createdTime}}
+                                            </time>
+                                        </div>
+                                        <div ng-show="comment.showReply">
+                                            <form ng-submit="myFunc()" style="margin-bottom:0px; padding-top: 10px">
+                                                <input type="text" class="input-block-level" style="margin-bottom:0px"
+                                                       id="sound_comment_reply_input_{{$index}}"
+                                                       placeholder="@{{comment.owner.profile.alias}}:"
+                                                       ng-model="comment.reply">
+                                            </form>
+                                        </div>
                                     </div>
                                 </li>
                             </ul>
+                        </div>
+
+                        <div class="{{loadClass}}" style="text-align: center">
+                            <i class="icon-spinner icon-spin icon-large"></i> 努力加载中...
                         </div>
                     </div>
                     <div class="span3">
